--- a/templates/application/deployment/deployment.twig
+++ b/templates/application/deployment/deployment.twig
@@ -7,16 +7,25 @@
 {% block content %}
     <h1>Deployment - <strong>{{ deployment.application.name }}</strong></h1>
 
+    <div class="details-box">
+        <dl class="split">
+            <dt class="split__title">Application</dt>
+            <dd>
+                <a href="{{ urlFor('repository', {id: deployment.application.id}) }}">{{ deployment.application.name }}</a>
+            </dd>
+
+            <dt class="split__title">Server</dt>
+            <dd><a href="{{ urlFor('server', {id: deployment.server.id}) }}">{{ deployment|formatDeploymentServer(true) }}</a></dd>
+
+            <dt class="split__title">Environment</dt>
+            <dd>
+                {{ deployment.server.environment.name }}
+            </dd>
+        </dl>
+    </div>
+
     <h4>Type</h4>
     <p>{{ deployment.server|formatServerType }}</p>
-
-    <h4>Server</h4>
-    <p>
-        <a href="{{ urlFor('server', {id: deployment.server.id}) }}">{{ deployment|formatDeploymentServer(true) }}</a> in <strong>{{ deployment.server.environment.name }}</strong>
-    </p>
-
-    <h4>Application</h4>
-    <p><a href="{{ urlFor('repository', {id: deployment.application.id}) }}">{{ deployment.application.name }}</a></p>
 
     <h4>File path</h4>
     <p>
