--- a/templates/kraken/configuration/latest/property.twig
+++ b/templates/kraken/configuration/latest/property.twig
@@ -7,11 +7,19 @@
 {% block content %}
     <h1>{{ page_title }} - <strong>{{ application.name }}</strong></h1>
 
-    <h4>Application</h4>
-    <p>{{ application.name }}</p>
+    <div class="details-box">
+        <dl class="split">
+            <dt class="split__title">Application</dt>
+            <dd>
+                <a href="{{ urlFor('kraken.application', {application: application.id}) }}">{{ application.name }}</a>
+            </dd>
 
-    <h4>Environment</h4>
-    <p>{{ environment.name }}</p>
+            <dt class="split__title">Environment</dt>
+            <dd>
+                {{ environment.name }}
+            </dd>
+        </dl>
+    </div>
 
     <section class="leader--andre">
         <h2>Schema</h2>
@@ -35,7 +43,6 @@
 
     <section class="leader--andre">
         <h2 class="mbn">Deployment History</h2>
-        <p class="additional">Most recent values deployed to this environment.</p>
         {{ block('property_history') }}
     </section>
 
@@ -51,6 +58,7 @@
 {% block property_history %}
 
     {% if history %}
+        <p class="additional">Most recent values deployed to this environment.</p>
         <table class="table--spacing-medium table--striped table--top-aligned" data-tablesaw-mode="stack">
             <thead>
                 <tr>
