--- a/templates/help/help.twig
+++ b/templates/help/help.twig
@@ -246,6 +246,9 @@ beta
         <li>
             <a href="/docs/2.5/release-notes.html">2.5</a>
         </li>
+        <li>
+            <a href="/docs/2.6/release-notes.html">2.6</a>
+        </li>
     </ul>
 {% endblock %}
 
