Update button list on app page

--- a/templates/application/applications.twig
+++ b/templates/application/applications.twig
@@ -54,8 +54,8 @@
         </tbody>
     </table>
 
-    <p>
-        <a class="btn" href="{{ urlFor('repository.admin.add') }}">Add Application</a>
-        <a class="btn" href="{{ urlFor('group.admin.add') }}">Add Group</a>
-    </p>
+    <ul class="button-list button-list--half">
+        <li><a class="btn" href="{{ urlFor('repository.admin.add') }}">Add Application</a></li>
+        <li><a class="btn" href="{{ urlFor('group.admin.add') }}">Add Group</a></li>
+    </ul>
 {% endblock %}
