Add prefix icon on release notes

--- a/templates/help/help.twig
+++ b/templates/help/help.twig
@@ -232,7 +232,7 @@ beta
         </p>
     {% endif %}
 
-    <h3 id="release-notes">Release Notes</h3>
+    <h3 id="release-notes">{{ macros.status_icon('Release Notes') }}</h3>
     <ul class="list--bullet">
         <li>
             <a href="/docs/2.4/release-notes.html">2.4</a>
