--- a/templates/admin/users.management.twig
+++ b/templates/admin/users.management.twig
@@ -22,7 +22,7 @@
         </p>
     {% endif %}
 
-    <table class="table--spacing-medium" data-tablesaw-mode="stack">
+    <table class="table--spacing-medium table--striped" data-tablesaw-mode="stack">
         <thead>
             <tr>
                 <th>User ID</th>
