--- a/templates/kraken/help.twig
+++ b/templates/kraken/help.twig
@@ -73,6 +73,7 @@
         <li>Lists of cache servers</li>
         <li>Feature flags (disabling parts of application)</li>
         <li>Logging settings (such as setting the log level to be sent to a service)</li>
+        <li>Sensitive configuration that should be encrypted at rest (database passwords, api keys)</li>
     </ul>
 
     <h3 id="add-application">{{ macros.status_icon('How do I add my application to Kraken?') }}</h3>
