--- a/templates/kraken/environment.add.twig
+++ b/templates/kraken/environment.add.twig
@@ -18,21 +18,6 @@
                     <input type="text" name="name" id="env-name" maxlength="40" required value="{{ form.name }}" class="text-input t50">
                 </li>
                 <li>
-                    <label for="env-server">Consul Server</label>
-                    <small class="additional">
-                        The consul server associated with this environment.
-                        <br>Must be the full URL and begin with <code>http://</code> or <code>https://</code>.
-                    </small>
-
-                    <input type="text" name="server" id="env-server" maxlength="200" required value="{{ form.server }}" class="text-input">
-                </li>
-                <li>
-                    <label for="env-token">Consul Token</label>
-                    <small class="additional">Access token for consul. Optional.</small>
-
-                    <input type="text" name="token" id="env-token" maxlength="200" value="{{ form.token }}" class="text-input" autocomplete="off">
-                </li>
-                <li>
                     <label>Is this a production environment?</label>
 
                     <ul class="radio-grid--form">
@@ -48,6 +33,50 @@
                             <label for="env-is_prod-0">No</label>
                         </li>
                     </ul>
+                </li>
+
+                <li>
+                    <h2>Consul</h2>
+                </li>
+                <li>
+                    <label for="env-service">Consul Service URL</label>
+                    <small class="additional">
+                        The consul service associated with this environment.
+                        <br>Must be the full URL and begin with <code>http://</code> or <code>https://</code>.
+                    </small>
+
+                    <input type="text" name="consul_service" id="env-service" maxlength="200" value="{{ form.consul_service }}" class="text-input">
+                </li>
+                <li>
+                    <label for="env-token">Consul Token</label>
+                    <small class="additional">Access token for consul. Optional.</small>
+
+                    <input type="text" name="consul_token" id="env-token" maxlength="100" value="{{ form.consul_token }}" class="text-input" autocomplete="off">
+                </li>
+
+                <li>
+                    <h2>QKS</h2>
+                </li>
+                <li>
+                    <label for="env-qks_service">QKS Service URL</label>
+                    <small class="additional">
+                        The qks service associated with this environment.
+                        <br>Must be the full URL and begin with <code>http://</code> or <code>https://</code>.
+                    </small>
+
+                    <input type="text" name="qks_service" id="env-qks_service" maxlength="200" value="{{ form.qks_service }}" class="text-input">
+                </li>
+                <li>
+                    <label for="env-qks_client">QKS Client ID</label>
+                    <small class="additional">Application Client ID from API Gateway.</small>
+
+                    <input type="text" name="qks_client" id="env-qks_client" maxlength="100" value="{{ form.qks_client }}" class="text-input">
+                </li>
+                <li>
+                    <label for="env-qks_secret">QKS Client Secret</label>
+                    <small class="additional">Application Client Secret from API Gateway.</small>
+
+                    <input type="text" name="qks_secret" id="env-qks_secret" maxlength="100" value="{{ form.qks_secret }}" class="text-input" autocomplete="off">
                 </li>
             </ul>
 
