--- a/templates/kraken/environment/environment.edit.twig
+++ b/templates/kraken/environment/environment.edit.twig
@@ -30,19 +30,47 @@
                 </li>
 
                 <li>
-                    <label for="env-server">Consul Server</label>
+                    <h2>Consul</h2>
+                </li>
+                <li>
+                    <label for="env-service">Consul Server</label>
                     <small class="additional">
-                        The consul server associated with this environment.
+                        The consul service associated with this environment.
                         <br>Must be the full URL and begin with <code>http://</code> or <code>https://</code>.
                     </small>
 
-                    <input type="text" name="server" id="env-server" maxlength="200" required value="{{ form.server }}" class="text-input">
+                    <input type="text" name="service" id="env-service" maxlength="200" value="{{ form.service }}" class="text-input">
                 </li>
                 <li>
                     <label for="env-token">Consul Token</label>
                     <small class="additional">Access token for consul. Optional.</small>
 
                     <input type="text" name="token" id="env-token" maxlength="200" value="{{ form.token }}" class="text-input" autocomplete="off">
+                </li>
+
+                <li>
+                    <h2>QKS</h2>
+                </li>
+                <li>
+                    <label for="env-qks_service">QKS Service URL</label>
+                    <small class="additional">
+                        The qks service associated with this environment.
+                        <br>Must be the full URL and begin with <code>http://</code> or <code>https://</code>.
+                    </small>
+
+                    <input type="text" name="qks_service" id="env-qks_service" maxlength="200" value="{{ form.qks_service }}" class="text-input">
+                </li>
+                <li>
+                    <label for="env-qks_client">QKS Client ID</label>
+                    <small class="additional">Application Client ID from API Gateway.</small>
+
+                    <input type="text" name="qks_client" id="env-qks_client" maxlength="100" value="{{ form.qks_client }}" class="text-input">
+                </li>
+                <li>
+                    <label for="env-qks_secret">QKS Client Secret</label>
+                    <small class="additional">Application Client Secret from API Gateway.</small>
+
+                    <input type="text" name="qks_secret" id="env-qks_secret" maxlength="100" value="{{ form.qks_secret }}" class="text-input" autocomplete="off">
                 </li>
             </ul>
 
