Add environment info page and add qks properties to env edit

--- a/templates/kraken/application/application.edit.twig
+++ b/templates/kraken/application/application.edit.twig
@@ -4,7 +4,7 @@
 {% set page_title = "Edit Environment: " ~ application.name %}
 
 {% block content %}
-    <h1>Edit <strong>{{ application.name }}</strong> Application</h1>
+    <h1>Edit Application - <strong>{{ application.name }}</strong></h1>
 
     <div class="form-wrapper">
 
