--- a/templates/kraken/environment/environment.edit.twig
+++ b/templates/kraken/environment/environment.edit.twig
@@ -33,50 +33,53 @@
                     <h2>Consul</h2>
                 </li>
                 <li>
-                    <label for="env-service">Consul Server</label>
-                    <small class="additional">
-                        The consul service associated with this environment.
-                        <br>Must be the full URL and begin with <code>http://</code> or <code>https://</code>.
-                    </small>
+                    <label for="env-service">
+                        <span class="tooltipped tooltipped-e" aria-label="The consul service associated with this environment.">Service URL</span>
+                    </label>
 
                     <input type="text" name="service" id="env-service" maxlength="200" value="{{ form.service }}" class="text-input">
+                    <small class="additional">Must be the full URL and begin with <code>http://</code> or <code>https://</code>.</small>
                 </li>
                 <li>
-                    <label for="env-token">Consul Token</label>
-                    <small class="additional">Access token for consul. Optional.</small>
+                    <label for="env-token">
+                        {{ macros.icon('locked') }}
+                        <span class="tooltipped tooltipped-e" aria-label="Access token for Consul. Optional if not using ACL.">Access Token</span>
+                    </label>
 
-                    <input type="text" name="token" id="env-token" maxlength="200" value="{{ form.token }}" class="text-input" autocomplete="off">
+                    <input type="text" name="token" id="env-token" maxlength="40" value="{{ form.token }}" class="text-input" autocomplete="off">
                 </li>
 
                 <li>
                     <h2>QKS</h2>
                 </li>
                 <li>
-                    <label for="env-qks_service">QKS Service URL</label>
-                    <small class="additional">
-                        The qks service associated with this environment.
-                        <br>Must be the full URL and begin with <code>http://</code> or <code>https://</code>.
-                    </small>
+                    <label for="env-qks_service">
+                        <span class="tooltipped tooltipped-e" aria-label="The QKS service associated with this environment.">Service URL</span>
+                    </label>
 
                     <input type="text" name="qks_service" id="env-qks_service" maxlength="200" value="{{ form.qks_service }}" class="text-input">
+                    <small class="additional">Must be the full URL and begin with <code>http://</code> or <code>https://</code>.</small>
                 </li>
                 <li>
-                    <label for="env-qks_client">QKS Client ID</label>
-                    <small class="additional">Application Client ID from API Gateway.</small>
+                    <label for="env-qks_client">
+                        <span class="tooltipped tooltipped-e" aria-label="Application Client ID from API Gateway.">Client ID</span>
+                    </label>
 
                     <input type="text" name="qks_client" id="env-qks_client" maxlength="100" value="{{ form.qks_client }}" class="text-input">
                 </li>
                 <li>
-                    <label for="env-qks_secret">QKS Client Secret</label>
-                    <small class="additional">Application Client Secret from API Gateway.</small>
+                    <label for="env-qks_secret">
+                        {{ macros.icon('locked') }}
+                        <span class="tooltipped tooltipped-e" aria-label="Application Client ID from API Gateway.">Client Secret</span>
+                    </label>
 
-                    <input type="text" name="qks_secret" id="env-qks_secret" maxlength="100" value="{{ form.qks_secret }}" class="text-input" autocomplete="off">
+                    <input type="text" name="qks_secret" id="env-qks_secret" maxlength="40" value="{{ form.qks_secret }}" class="text-input" autocomplete="off">
                 </li>
             </ul>
 
             <ul class="button-list">
                 <li><input class="btn btn--action" type="submit" value="Save Changes"></li>
-                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ urlFor('kraken.environments') }}">Cancel</a></li>
+                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ urlFor('kraken.environment', {environment: environment.id}) }}">Cancel</a></li>
             </ul>
 
         </form>
