--- a/templates/kraken/_partial/schema.twig
+++ b/templates/kraken/_partial/schema.twig
@@ -1,7 +1,7 @@
 {% import "_partial/macros.twig" as macros %}
 
 {% if schema %}
-    <table class="table--spacing-medium table--striped">
+    <table class="table--spacing-medium table--striped table--top-aligned" data-tablesaw-mode="stack">
         <thead>
             <tr>
                 <th>Key</th>
